<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/spVsDpButton"
        style="@style/ButtonStyle"
        android:text="@string/title_sp_vs_dp" />

    <Button
        android:id="@+id/ellipsizingButton"
        style="@style/ButtonStyle"
        android:text="@string/title_ellipsizing" />

    <Button
        android:id="@+id/cutOffButton"
        style="@style/ButtonStyle"
        android:text="@string/title_cut_off" />

    <Button
        android:id="@+id/overlayButton"
        style="@style/ButtonStyle"
        android:text="@string/title_overlay" />

    <Button
        android:id="@+id/autosizingButton"
        style="@style/ButtonStyle"
        android:text="@string/title_autosizing" />

</LinearLayout>
